// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render StatusBar correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="c4ec1a1a-5d78-45b0-8177-c0bf644e331e"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  />
</div>
`;

exports[`should render StatusBar with default message correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="3b974b93-67af-4c6e-a1f2-64b4527f75f5"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  >
    <p
      className="status-bar__default-msg"
      key="6e411651-2d51-4f9b-9d09-ced8e8eebb0f"
    >
      default message
    </p>
  </CSSTransitionGroup>
</div>
`;

exports[`should render StatusBar with route fail status correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="8ca8f0aa-0943-4331-882f-f4acb70834c3"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  >
    <p
      className="status-bar__text"
      key="c2238f75-fe9c-406e-9948-c7af9b6b564c"
    >
      route fail
      . Please choose another destination
    </p>
  </CSSTransitionGroup>
</div>
`;

exports[`should render StatusBar with route in progress status correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="09d64de3-6462-4ce2-a3d7-9ab3c772a959"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  >
    <p
      className="status-bar__text"
      key="1d6a0b3e-2d9d-46fd-975a-3814fa0069f4"
    >
      in progress
    </p>
  </CSSTransitionGroup>
</div>
`;

exports[`should render StatusBar with server error correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="55ee700e-4421-44b9-b91c-b0d3040a6266"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  >
    <p
      className="status-bar__text"
      key="5fe390a1-8306-43e4-8023-216cb61c58bd"
    >
      There was a connection error, please try again
    </p>
  </CSSTransitionGroup>
</div>
`;

exports[`should render StatusBar with total distance correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="d42b12bf-c1f7-4889-88cd-1e86caf4bdf1"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  >
    <p
      className="status-bar__text"
      key="7f9537a6-cdd0-470b-9138-4b36217d19b3"
    >
      Total distance 
      10
       km
    </p>
  </CSSTransitionGroup>
</div>
`;

exports[`should render StatusBar with total time correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="4c9c016e-bc0e-4516-b835-ec83962e35f7"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  >
    <p
      className="status-bar__text"
      key="c4da9354-a458-4358-ba80-1b7cb78cb632"
    >
      Travel time 
      150
       min.
    </p>
  </CSSTransitionGroup>
</div>
`;
